@@ -8,7 +8,9 @@ Version 2.4.3 - September, 2019
   create a recursion error at parser definition time. Thanks to
   Michael Clerx for the assist. (Addresses issue #123)
 
-- Backport from pyparsing 3.0.0 of __diag__.enable_all_warnings().
+- Backports from pyparsing 3.0.0:
+  . __diag__.enable_all_warnings().
+  . Fixed bug in PrecededBy which caused infinite recursion, issue #127
 
 
 Version 2.4.2 - July, 2019
